20170701

* Thanks to Brian Collins @ linuxsynths.com, added over 100 new patches to
    the default patch set.
* Added a 'category' field to each patch.
* Converted the patch list to GtkTreeView, and made it sortable by program
    number, name, or category.
* Updated gtkknob.[ch], which swapped the default to linear/angular button
    bindings.
* Removed support for GTK+ earlier than version 2.24.
* Removed compiler-specific optimization flags.
* Fix a number of security problems, minor bugs, compiler warnings, and
    documentation errors. Thanks to Olivier Humbert and dcb314.

20130224

* Added buttons to center the pan controls, on the suggestion of
    Robert from Germany.

20121128

* Jonathan H. Pickard added support for panning of the output mix via
    MIDI control change 10.

20120918 smbolton

* Fixed GUI to respect Y_MAX_POLYPHONY.

20120903

* Luke Andrew added three new filter modes: 2-pole high-pass, 4-pole
    high-pass, and band-reject (plus he did some nice code
    refactoring.)

20120729 smbolton

* Removed all code enabled by '--enable-developer', except for the
    option to write patch files as 'C' code.  Under-development
    functions are now contained in git branches.

* Promoted Wavecycle Chorus to regular (non-developer-only)
    oscillator mode. 

* Promoted resonz to regular (non-developer-only) filter mode.

* Fixed a click that occurred with several oscillator modes (Wave
    Cycle, PADsynth, and FM) when using portamento in a monophonic
    mode, due to the oscillator phase being reset spuriously.

* Added icon (32x32 only for now, not installing).

* Added some new patches to the default set, including several
    contributed by Ken Restivo.

* Fixed configure.ac for FreeBSD (thanks, downstream.)

* Removed developer-only filters resonr (unneeded) and Neosweep
    (unremarkable; license unclear). Removed ESQ-1 patch import
    code, which never really worked anyway.

20100922 smbolton
