@@ -4,7 +4,7 @@
                            DSSI Soft Synth Interface
 
 WhySynth is written and maintained by Sean Bolton.  It is copyright
-(c) 2017 under the GNU General Public License, version 2 or later.
+(c) 2018 under the GNU General Public License, version 2 or later.
 Bug reports, kudos, and job offers (seriously!) should go directly
 to Sean at the email address:
 
@@ -74,6 +74,7 @@ pioneers.
 
 Bug fixes have been contributed by:
     Chris Cannam
+    Olga Vasileva
 
 WhySynth (or Xsynth-DSSI) patch contributors:
     Nigel Henry
